# reviewlab

./: .dockerignore  Dockerfile.backend  Dockerfile.worker  docker-compose.yml  pyproject.toml
app/: __main__.py  base.py  server.py  settings.py
app/api/: hello.py  submissions.py  tasks.py  users.py
app/frontend/: courses.py  hello.py  labs.py  landing.py  settings.py  shared.py  submissions.py  users.py
app/models/: course.py  group.py  links.py  plagiarism.py  submission.py  task.py  task_group.py  task_stats.py  user.py
app/schemas/: settings.py
app/services/: auth.py  course.py  mq.py  settings.py  submission.py  task.py  user.py
app/services/plagiarism/: ast.py  base.py  jaccard.py  semantic.py
app/storage/: postgres.py
app/utils/: emojis.py  language.py  mentor_presets.py
app/utils/chunking/: __init__.py  base.py  cpp.py  java.py  python.py
app/utils/embedding/: __init__.py  local.py  main.py  openai.py
app/utils/preprocessing/: __init__.py  base.py  java.py
cli/: pyproject.toml
cli/app/: __main__.py  auth.py  client.py
cli/rlcli/: __main__.py  client.py  config.py
extension/chrome/: content.js  manifest.json  popup.html  popup.js
images/: logo.xcf
playground/: chunks.py  preprocessing.py
scripts/: diagnostic.py  entrypoint_worker.sh  setup_linters.sh
tests/: test_embedding.py  test_embedding_service.py  test_user_service.py
tests/chunking/: test_cpp_chunker.py  test_java_chunker.py  test_python_chunker.py
tests/plagiarism/: test_ast.py  test_copydetect.py  test_embedding_strategy.py  test_jaccard.py  test_levenshtein.py  test_semantic_chunking.py
tests/preprocessing/: test_cpp_preprocessor.py  test_java_preprocessor.py  test_python_preprocessor.py
worker/: __main__.py  config.py  worker.py
worker/models/: embedding.py  plagiarism.py
worker/services/: embedding.py
worker/services/llm_mentor/: main.py
worker/services/plagiarism/: ast.py  base.py  copydetect_strategy.py  embedding.py  jaccard.py  levenshtein.py  main.py  semantic.py
worker/services/static_analysis/: base.py  cpp.py  java.py  main.py  python.py
worker/utils/chunking/: base.py  cpp.py  java.py  python.py
worker/utils/embedding/: __init__.py  huggingface.py  main.py
worker/utils/normalization/: __init__.py  baseline.py  zscore.py
worker/utils/preprocessing/: base.py  cpp.py  java.py  python.py
