[project]
name = "vkr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.37",
    "pgvector>=0.4.2",
    "asyncpg>=0.31.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "pygments>=2.19.2",
    "cashews>=7.5.0",
    "copydetect>=0.5.0",
    "openai>=2.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
