[project]
name = "reviewlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.37",
    "pgvector>=0.4.2",
    "asyncpg>=0.31.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "pygments>=2.19.2",
    "cashews>=7.5.0",
    "copydetect>=0.5.0",
    "openai>=2.29.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "pydantic[email]>=2.12.5",
    "fastapi>=0.135.2",
    "python-fasthtml>=0.12.50",
    "uvicorn>=0.42.0",
    "markdown>=3.10.2",
    "aio-pika>=9.6.2",
    "faststream[rabbit]>=0.6.7",
    "flake8>=7.3.0",
    "asgi-ratelimit>=0.10.0",
]

[dependency-groups]
dev = [
    "copydetect>=0.5.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
