[project]
name = "rlcli"
version = "0.1.0"
description = "ReviewLab CLI - утилита для студентов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
rlcli = "rlcli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
